--- a/aeroflex-process/pom.xml
+++ b/aeroflex-process/pom.xml
@@ -15,55 +15,6 @@
 	<name>Aeroflex Services :: Process</name>
 	<url>http://www.myorganization.org</url>
 
-	<repositories>
-		<repository>
-			<id>open.iona.m2</id>
-			<name>IONA Open Source Community Release Repository</name>
-			<url>http://repo.open.iona.com/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>open.iona.m2-snapshot</id>
-			<name>IONA Open Source Community Snapshot Repository</name>
-			<url>http://repo.open.iona.com/maven2-snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>open.iona.m2</id>
-			<name>IONA Open Source Community Release Repository</name>
-			<url>http://repo.open.iona.com/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>open.iona.m2-snapshot</id>
-			<name>IONA Open Source Community Snapshot Repository</name>
-			<url>http://repo.open.iona.com/maven2-snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<dependencies>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -101,8 +52,9 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
-						<Import-Package>*,org.apache.camel.osgi</Import-Package>
-						<Private-Package>com.aeroflex.smx</Private-Package>
+						<Import-Package>org.springframework.beans.factory.config,
+                            *</Import-Package>
+						<Private-Package>com.aeroflex.smx.process_invoke</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
