--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 				<artifactId>aeroflex-pojo-service</artifactId>
 				<version>1.0-SNAPSHOT</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>com.aeroflex.smx</groupId>
+				<artifactId>aeroflex-job-workflow</artifactId>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
 
 			<!-- Normal dependencies -->
 			<dependency>
